--- a/HrNew.Application/HrNew.Application.csproj
+++ b/HrNew.Application/HrNew.Application.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Constants\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Features\" />
+    <Folder Include="Models\" />
+    <Folder Include="Responses\" />
   </ItemGroup>
 
   <ItemGroup>
