--- a/HrNew.Application/HrNew.Application.csproj
+++ b/HrNew.Application/HrNew.Application.csproj
@@ -7,10 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
-    <Folder Include="Features\" />
+    <Folder Include="Features\HrRequests\Handlers\Commands\" />
+    <Folder Include="Features\HrRequests\Handlers\Queries\" />
+    <Folder Include="Features\HrRequests\Requests\Commands\" />
+    <Folder Include="Features\HrRequests\Requests\Queries\" />
+    <Folder Include="Features\HrTypes\Handlers\Commands\" />
+    <Folder Include="Features\HrTypes\Handlers\Queries\" />
+    <Folder Include="Features\HrTypes\Requests\Queries\" />
     <Folder Include="Models\" />
-    <Folder Include="Responses\" />
   </ItemGroup>
 
   <ItemGroup>
