Add configurations in roles

--- a/HrNew.Identity/HrNew.Identity.csproj
+++ b/HrNew.Identity/HrNew.Identity.csproj
@@ -24,4 +24,9 @@
     <ProjectReference Include="..\HrNew.Application\HrNew.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
