--- a/HrNew.API/appsettings.json
+++ b/HrNew.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "HrManagementConnectionString": "Server=(localdb)\\mssqllocaldb;Database=hrmanagement_db;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "HrManagementIdentityConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=hrmanagement_identity_db;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
