--- a/HrNew.Persistence/HrNew.Persistence.csproj
+++ b/HrNew.Persistence/HrNew.Persistence.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\HrNew.Application\HrNew.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
