--- a/HrNew.API/appsettings.json
+++ b/HrNew.API/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "842236FSD345EA34CFB42156EFGSD132",
+    "Issuer": "HrManagement",
+    "Audience": "HrManagementUser",
+    "DurationInMinutes": 60
+  }
 }
